--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/datasetsV2.html
@@ -28,7 +28,7 @@
 </head>
 <div class="container-fluid">
     <div class="row" style="margin-top: 70px;">
-        <div class="col-6">
+        <div class="col-5">
             <div class="card shadow">
                 <div class="card-header">Upload Dataset</div>
                 <div class="card-body">
@@ -82,15 +82,6 @@
                                     required>
                             </div>
                             <div class="upload-form-group">
-                                <label for="ImageDims">ImageDims:<span class="required">*</span></label>
-                                <input type="text" id="ImageDims-x" name="ImageDims-x" placeholder="x"
-                                    class="form-control" required>
-                                <input type="text" id="ImageDims-y" name="ImageDims-y" placeholder="y"
-                                    class="form-control" required>
-                                <input type="text" id="ImageDims-z" name="ImageDims-z" placeholder="z"
-                                    class="form-control" required>
-                            </div>
-                            <div class="upload-form-group">
                                 <label for="Dims2">Dims2:<span class="required">*</span></label>
                                 <input type="text" id="Dims2-x" name="Dims2-x" placeholder="x" class="form-control"
                                     required>
@@ -127,7 +118,7 @@
                                 <input type="text" id="thickness" name="thickness" class="form-control">
                             </div>
                         </div>
-                        <div class="col-2">
+                        <div class="col-4">
                             <div class="form-group">
                                 <label for="filename">TifFile:<span class="required">*</span></label>
                                 <input type="file" class="form-control-file" id="fileInputTiff">
@@ -147,6 +138,10 @@
     <script src="https://cdn.socket.io/3.0.3/socket.io.min.js"></script>
     <script>
         document.getElementById('submitBtn').addEventListener('click', async function () {
+            
+            // disabel submitBtn
+            submitBtn.disabled = true;
+
             const datasetNameInput = document.getElementById('dataset-name');
             const modality = document.getElementById('modality');
             const exposure = document.getElementById('exposure');
@@ -154,9 +149,9 @@
             const voxels_x = document.getElementById('voxels-x');
             const voxels_y = document.getElementById('voxels-y');
             const voxels_z = document.getElementById('voxels-z');
-            const ImageDims_x = document.getElementById('ImageDims-x');
-            const ImageDims_y = document.getElementById('ImageDims-y');
-            const ImageDims_z = document.getElementById('ImageDims-z');
+            // const ImageDims_x = document.getElementById('ImageDims-x');
+            // const ImageDims_y = document.getElementById('ImageDims-y');
+            // const ImageDims_z = document.getElementById('ImageDims-z');
             const Dims2_x = document.getElementById('Dims2-x');
             const Dims2_y = document.getElementById('Dims2-y');
             const Dims2_z = document.getElementById('Dims2-z');
@@ -173,7 +168,7 @@
             const fileInputTiff = document.getElementById('fileInputTiff');
             const fileTiff = fileInputTiff.files[0];
             // Create an array containing all input boxes that need to be checked
-            const requiredInputs = [datasetNameInput, voxels_x, voxels_y, voxels_z, ImageDims_x, ImageDims_y, ImageDims_z, Dims3_x, Dims3_y, Dims3_z, pixelLengthUM, zskip];
+            const requiredInputs = [datasetNameInput, voxels_x, voxels_y, voxels_z, Dims3_x, Dims3_y, Dims3_z, pixelLengthUM, zskip];
 
             // Iterate over each input box, if any of them are empty, stop the upload and show a warning
             for (let input of requiredInputs) {
@@ -191,9 +186,9 @@
             formData.append('voxels_x', voxels_x.value);
             formData.append('voxels_y', voxels_y.value);
             formData.append('voxels_z', voxels_z.value);
-            formData.append('ImageDims_x', ImageDims_x.value);
-            formData.append('ImageDims_y', ImageDims_y.value);
-            formData.append('ImageDims_z', ImageDims_z.value);
+            // formData.append('ImageDims_x', ImageDims_x.value);
+            // formData.append('ImageDims_y', ImageDims_y.value);
+            // formData.append('ImageDims_z', ImageDims_z.value);
             formData.append('Dims2_x', Dims2_x.value);
             formData.append('Dims2_y', Dims2_y.value);
             formData.append('Dims2_z', Dims2_z.value);
@@ -231,6 +226,7 @@
                 shouldContinue = false
                 const data = await response.json();
                 alert(data.message)
+                submitBtn.disabled = false;
             }
         });
 
