--- a/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
+++ b/Web-Azure/LATEST-Web-Azure/Web-Azure/bivwebs/templates/layout.html
@@ -51,11 +51,11 @@
         {% if 'email' in session %}
         <a class="nav-link" id="viewer-link" href="/viewer"> <i class="fas fa-eye"></i> Viewer </a>
         {% if session['multiAvailable'] == true %}
-        <a class="nav-link" id="multiviewer-link" href="/multiviewer"> <i class="fas fa-images"></i>
-          Multi-Viewer </a>
+        <!-- <a class="nav-link" id="multiviewer-link" href="/multiviewer"> <i class="fas fa-images"></i>
+          Multi-Viewer </a> -->
         {% else %}
-        <a class="nav-link" href="/multiviewer" style="pointer-events: none"> <i class="fas fa-images"></i>
-          Multi-Viewer </a>
+        <!-- <a class="nav-link" href="/multiviewer" style="pointer-events: none"> <i class="fas fa-images"></i>
+          Multi-Viewer </a> -->
         {% endif %}
         {% endif %}
         {% if session['level'] == 'admin' %}
